add jvm args